# CodeGraphContext

./: .gitignore  MANIFEST.in  Makefile  README.kor.md  README.md  README.uk.md  README.zh-CN.md  cgc.spec  package-lock.json  pyproject.toml  requirements.txt
.claude/skills/cgc-wiki/: SKILL.md
.claude/skills/wiki-gen/: SKILL.md
.github/: FUNDING.yml
.github/workflows/: build.yml  ci.yml  publish.yml  test.yml
docs/: BUNDLE_IMPLEMENTATION.md  BUNDLE_SUMMARY.md  MCP_TOOLS.md  QUICK_REFERENCE.md  UPDATING_DOCS.md  mkdocs.yml
docs/docs/: architecture.md  contributing_languages.md  future_work.md  roadmap.md
docs/docs/concepts/: how_it_works.md  the_graph.md
docs/docs/getting-started/: installation.md  prerequisites.md  quickstart.md
docs/docs/guides/: bundles.md  ci_cd.md  contexts.md  mcp_guide.md  onboarding.md  setup_deep_dive.md  visualization.md
docs/docs/reference/: cli_system.md  configuration.md  mcp_master.md
docs/site/: 404.html  index.html
docs/site/agent_skill_codegraphcontext/: index.html
docs/site/architecture/: index.html
docs/site/contributing/: index.html
docs/site/contributing_languages/: index.html
docs/site/cookbook/: index.html
docs/site/deployment/: index.html
docs/site/future_work/: index.html
docs/site/integration_guide/: index.html
docs/site/license/: index.html
docs/site/roadmap/: index.html
docs/site/search/: search_index.json
docs/site/setup_workflows/: index.html
docs/site/troubleshooting/: index.html
docs/site/use_cases/: index.html
docs/site/use_cases_detailed/: index.html
docs/site/user_journeys/: index.html
docs/site/watching/: index.html
docs/site/windows_setup/: index.html
organizer/: Tools_Exploration.md  docs.md  language_specific_nodes.md  troubleshoot.md
playground/src/: App.tsx
playground/src/components/: GraphCanvas.tsx
rust/: Cargo.toml
rust/cgc-core/: Cargo.toml
rust/cgc-core/src/: lib.rs  parser.rs  sanitize.rs  types.rs
rust/cgc-core/src/lang/: c_lang.rs  cpp.rs  csharp.rs  dart.rs  elixir.rs  go.rs  haskell.rs  java.rs  javascript.rs  kotlin.rs  mod.rs  perl.rs  php.rs  python.rs  ruby.rs  rust_lang.rs  scala.rs  swift.rs  tsx.rs  typescript.rs
rust/cgc-core/src/resolution/: calls.rs  inheritance.rs  mod.rs
rust/cgc-python/: Cargo.toml
rust/cgc-python/src/: conversions.rs  lib.rs
rust/tree-sitter-perl-vendor/: Cargo.toml  build.rs
rust/tree-sitter-perl-vendor/src/: lib.rs
scripts/: cgc-wiki.py
src/codegraphcontext/: server.py  tool_definitions.py
src/codegraphcontext/cli/: cli_helpers.py  config_manager.py  main.py  registry_commands.py
src/codegraphcontext/core/: __init__.py  bundle_registry.py  cgc_bundle.py  cgcignore.py  database_falkordb.py  database_kuzu.py  watcher.py
src/codegraphcontext/tools/: code_finder.py  graph_builder.py  system.py  tree_sitter_parser.py
src/codegraphcontext/utils/: tree_sitter_manager.py
src/codegraphcontext/viz/: server.py
tests/e2e/: test_user_journeys.py
tests/integration/cli/: test_cli_commands.py
tests/unit/core/: test_cgcignore_core.py  test_cgcignore_patterns.py
tests/unit/parsers/: test_cpp_parser.py
tests/unit/tools/: test_graph_builder_perf_fixes.py  test_kuzu_relationship_queries.py
vscode-extension/: BUGFIX_CALLEES.md  CHANGELOG.md  DEBUG_EMPTY_PANELS.md  DEVELOPMENT.md  LICENSE  OVERVIEW.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TESTING.md  TESTING_INSTRUCTIONS.md  TROUBLESHOOTING.md  VENV_FIX.md  VENV_SETUP.md  package-lock.json  package.json  test_mcp_connection.py  test_parser.js  test_project_parser.js
vscode-extension/src/: cgcManager.ts  extension.ts  lineBasedMessageRW.ts  mcpClient.ts  statusBarManager.ts
vscode-extension/src/panels/: configPanel.ts  graphVisualizationPanel.ts
website/: package-lock.json  package.json  vercel.json
website/src/: index.css
website/src/components/: CodeGraphViewer.tsx  (+4 more)
(+68 files in other folders)
