[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "codegraphcontext-rust"
version = "0.5.5"
description = "Rust-accelerated code indexing engine for CodeGraphContext. 19 languages, 5-18x faster parsing via tree-sitter + rayon."
authors = [
    { name = "Shashank Shekhar Singh", email = "shashankshekharsingh1205@gmail.com" },
    { name = "tinhthanh" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "neo4j>=5.15.0",
    "watchdog>=3.0.0",
    "stdlibs>=2023.11.18",
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
    "inquirerpy>=0.3.4",
    "python-dotenv>=1.0.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-language-pack>=0.6.0",
    "tree-sitter-c-sharp>=0.21.0",
    "pyyaml",
    "nbformat",
    "nbconvert>=7.16.6",
    "pathspec>=0.12.1",
    "falkordb>=0.1.0",
    "requests>=2.28.0",
    "falkordblite>=0.1.0; sys_platform != 'win32' and python_version >= '3.12'",
    "kuzu>=0.4.0; sys_platform == 'win32' or (sys_platform != 'win32' and python_version >= '3.10' and python_version < '3.12')",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0"
]

[project.optional-dependencies]
parsing = [
    "tree-sitter>=0.21.0",
    "tree-sitter-language-pack>=0.6.0",
    "tree-sitter-c-sharp>=0.21.0",
]
dev = [
    "pytest>=7.4.0",
    "black>=23.11.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
"Homepage" = "https://github.com/tinhthanh/CodeGraphContext"
"Repository" = "https://github.com/tinhthanh/CodeGraphContext"
"Bug Tracker" = "https://github.com/tinhthanh/CodeGraphContext/issues"
"Upstream" = "https://github.com/CodeGraphContext/CodeGraphContext"

[project.scripts]
cgc = "codegraphcontext.cli.main:app"
codegraphcontext = "codegraphcontext.cli.main:app"

[tool.maturin]
manifest-path = "rust/cgc-python/Cargo.toml"
python-source = "src"
module-name = "codegraphcontext._cgc_rust"
features = ["pyo3/extension-module"]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.package-data]
codegraphcontext = ["viz/dist/**/*"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["codegraphcontext*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
norecursedirs = ["tests/fixtures", "tests/e2e/sample_projects", "venv", ".git", "__pycache__"]
markers = [
    "integration: mark a test as an integration test.",
    "e2e: mark a test as an end-to-end test.",
    "slow: mark test as slow."
]
