[package]
name = "cgc-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tree-sitter = "0.25"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c = "0.24"
tree-sitter-rust = "0.24"
tree-sitter-ruby = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-php = "0.24"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-scala = "0.25"
tree-sitter-swift = "0.7"
tree-sitter-haskell = "0.23"
tree-sitter-dart = "0.1"
tree-sitter-perl-vendor = { path = "../tree-sitter-perl-vendor" }
tree-sitter-elixir = "0.3"
streaming-iterator = "0.1"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
